# rusche

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  codecov.yml  coverage.yml  main.yml  rust.yml
examples/: backwards.rsp  backwards.scm  counter.rsc  counter.rsp  counter.scm  factorial-tail-recursive.rsc  factorial.rsc  fibonacci-tail-recursive.rsc  fibonacci-tail-recursive.scm  fibonacci.rsc  fibonacci.scm  fizzbuzz.rsc  fizzbuzz.scm  reverse.rsp  subst.rsp
examples/readme-demo/: main.rs
examples/rusche-cli/: io.rs  main.rs  repl.rs  runner.rs
examples/rusche-cli/builtin/: io.rs  mod.rs  vec.rs
src/: built_in.rs  builtin.rs  builtins.rs  cons.rs  env.rs  eval.rs  eval_error.rs  exec.rs  expr.rs  lexer.rs  lib.rs  list.rs  macros.rs  main.rs  parser.rs  prelude.rs  proc.rs  repl.rs  scanner.rs  span.rs  token.rs  utils.rs
src/built_in/: mod.rs  num.rs  quote.rs
src/builtin/: mod.rs  num.rs  primitive.rs  quote.rs  str.rs  utils.rs
src/builtins/: mod.rs  num.rs
src/env/: counter.rs  mod.rs
src/parser/: conscell.rs
tests/: builtin_tests.rs  builtins.rs  common.rs  gc_tests.rs  prelude.rs  prelude_tests.rs  primitives.rs  primitives_tests.rs  quote_tests.rs
