[package]
name = "rusche"
version = "0.2.3"
edition = "2021"
license = "MIT"
authors = ["Chan Ryu"]
description = "A lightweight Scheme interpreter embeddable in Rust applications"
readme = "README.md"
repository = "https://github.com/chanryu/rusche"
keywords = ["interpreter", "lisp", "scheme", "scripting", "scripting-language"]
categories = ["compilers", "config", "parser-implementations", "parsing"]
include = ["/src", "/examples", "/tests", "LICENSE", "README.md"]

[dependencies]

[dev-dependencies]
rustyline = "14.0.0"
colored = "2.1"

[lib]
name = "rusche"

[features]
callstack_trace = []
